# XML_QA_RAG

./: README.md  aaa.py  api_keys.py  app.py  conversion_doc.txt  json_to_bq.py  json_to_bq_2.py  json_to_bq_3.py  json_to_neo4j.py  main.py  neo4j_qa.py  pls_to_json.py  pyproject.toml  requirements.txt  xml_to_json.py
files/: bq_ready_4.jsonl  bq_script.sql  bq_script_0.sql  bq_script_1.sql  bq_script_2.sql  bq_script_3.sql  bq_script_4.sql  bq_script_5.sql  pls_sample_2.pls  pls_sample_3.pls  pls_sample_4.pls  result_3.json  result_4.json  result_4_clean_final.json  result_4_final.json  result_4_final_advanced.json  result_4_final_clean.json  result_4_new.json  result_final_best.json  result_final_elite.json  sample.jsonl  sample_1.xml  sample_2.jsonl  sample_2.xml  sample_3.pls
