[project]
name = "xml-qa-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-neo4j>=0.9.0",
    "neo4j>=6.1.0",
    "openai>=2.32.0",
    "streamlit>=1.56.0",
]
